[project]
name = "gst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mypy>=1.14.0",
    "pdbpp>=0.10.3",
    "pycodestyle>=2.12.1",
    "pylint>=3.3.2",
    "pylsp-mypy>=0.6.9",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "python-lsp-server>=1.12.0",
    "pycairo>=1.27.0",
    "pygobject>=3.50.0",
    "pygobject-stubs>=2.12.0",
]
